// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <label
        class="StyledText-sc-1sadyjn-0 weZKr"
        for="pet"
      >
        Which pet to get?
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 jxtDLa FormField__FormFieldContentBox-m9hood-1"
      >
        <button
          aria-label="Open Drop"
          class="StyledButton-sc-323bzc-0 dwXTUr Select__StyledSelectDropButton-sc-17idtfo-1 cmdTsS"
          disabled=""
          id="pet"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 ftwAxs"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 dtQiSn"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 hPlSXi Select__SelectTextInput-sc-17idtfo-0 fJMZdM"
                  id="pet__input"
                  placeholder="Just select something..."
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value="A dog"
                />
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 cdaeaF"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-ofa7kd-0 gJBwzH"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gcjayZ FormField__FormFieldContentBox-m9hood-1"
      >
        <button
          aria-label="Open Drop"
          class="StyledButton-sc-323bzc-0 ffRhrh Select__StyledSelectDropButton-sc-17idtfo-1 cmdTsS"
          id="pet"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 ftwAxs"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 dtQiSn"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 hPlSXi Select__SelectTextInput-sc-17idtfo-0 kMNVoA"
                  id="pet__input"
                  placeholder="Just select something..."
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 cdaeaF"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-ofa7kd-0 gJBwzH"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders an input inside the dropdown, that can search through the options 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jxtDLa FormField__FormFieldContentBox-m9hood-1"
      >
        <button
          aria-label="Open Drop"
          class="StyledButton-sc-323bzc-0 dwXTUr Select__StyledSelectDropButton-sc-17idtfo-1 cmdTsS"
          disabled=""
          id="pet"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 ftwAxs"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 dtQiSn"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 hPlSXi Select__SelectTextInput-sc-17idtfo-0 fJMZdM"
                  id="pet__input"
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 cdaeaF"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-ofa7kd-0 gJBwzH"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <label
        class="StyledText-sc-1sadyjn-0 weZKr"
        for="pet"
      >
        Which pet to get?
      </label>
      <span
        class="StyledText-sc-1sadyjn-0 hosPKv"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 gcjayZ FormField__FormFieldContentBox-m9hood-1"
      >
        <button
          aria-label="Open Drop"
          class="StyledButton-sc-323bzc-0 ffRhrh Select__StyledSelectDropButton-sc-17idtfo-1 cmdTsS"
          id="pet"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 ftwAxs"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 dtQiSn"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 hPlSXi Select__SelectTextInput-sc-17idtfo-0 kMNVoA"
                  id="pet__input"
                  placeholder="Just select something..."
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 cdaeaF"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-ofa7kd-0 gJBwzH"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders an input with a label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <label
        class="StyledText-sc-1sadyjn-0 weZKr"
        for="pet"
      >
        Which pet to get?
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 gcjayZ FormField__FormFieldContentBox-m9hood-1"
      >
        <button
          aria-label="Open Drop"
          class="StyledButton-sc-323bzc-0 ffRhrh Select__StyledSelectDropButton-sc-17idtfo-1 cmdTsS"
          id="pet"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 ftwAxs"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 dtQiSn"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 hPlSXi Select__SelectTextInput-sc-17idtfo-0 kMNVoA"
                  id="pet__input"
                  placeholder="Just select something..."
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 cdaeaF"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-ofa7kd-0 gJBwzH"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <label
        class="StyledText-sc-1sadyjn-0 weZKr"
        for="pet"
      >
        Which pet to get?
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 iBOdjp FormField__FormFieldContentBox-m9hood-1"
      >
        <button
          aria-label="Open Drop"
          class="StyledButton-sc-323bzc-0 ffRhrh Select__StyledSelectDropButton-sc-17idtfo-1 cmdTsS"
          id="pet"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 ftwAxs"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 dtQiSn"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 hPlSXi Select__SelectTextInput-sc-17idtfo-0 kMNVoA"
                  id="pet__input"
                  placeholder="Just select something..."
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 cdaeaF"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-ofa7kd-0 gJBwzH"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 bPwDLh"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`Select renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <label
        class="StyledText-sc-1sadyjn-0 weZKr"
        for="pet"
      >
        Which pet to get?
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 gcjayZ FormField__FormFieldContentBox-m9hood-1"
      >
        <button
          aria-label="Open Drop"
          class="StyledButton-sc-323bzc-0 ffRhrh Select__StyledSelectDropButton-sc-17idtfo-1 cmdTsS"
          id="pet"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 ftwAxs"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 dtQiSn"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 hPlSXi Select__SelectTextInput-sc-17idtfo-0 kMNVoA"
                  id="pet__input"
                  placeholder="Just select something..."
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 cdaeaF"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-ofa7kd-0 gJBwzH"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 kTuWTg"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
